# cpppca

./: CMakeLists.txt  README.md  compile_commands.json  cpppca.cpp  main.cpp  makefile  numbers.hpp  pca.hpp
